# BMET2922-Major-Project

./: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  users.json
gui/: __init__.py  bluetooth_monitor.py  main.py  main_window.py  pytest.ini
gui/core/: __init__.py  bluetooth_monitor.py  main_window.py  user_manager.py
gui/tests/: conftest.py  test_account_tab.py  test_bluetooth_connection_status.py  test_bluetooth_monitor.py  test_history_tab.py  test_live_monitor_tab.py  test_main_window.py  test_plot_navigation_mixin.py  test_research_tab.py  test_system_log.py  test_user_manager.py  test_utils.py
gui/ui_components/: __init__.py  bluetooth_connection_status.py  system_log.py
gui/ui_tabs/: __init__.py  account_tab.py  history_tab.py  live_monitor_tab.py  research_tab.py
gui/utils/: __init__.py  data_validation_utils.py  hrv_tooltip_utils.py  plot_navigation_mixin.py  plot_style_helper.py  session_info_formatter.py  signal_processing_utils.py
mcu/: mcu.ino  pulse_sim.cpp  pulse_sim.h  switch.cpp  switch.h
ppg_health_monitor/: bluetooth_monitor.py  main.py  main_window.py
ppg_health_monitor/ui_components/: __init__.py  bluetooth_connection_status.py  system_log.py  user_manager.py
ppg_health_monitor/ui_tabs/: __init__.py  account_tab.py  history_tab.py  live_monitor_tab.py  research_tab.py
ppg_health_monitor/utils/: __init__.py  plot_navigation_mixin.py  session_info_formatter.py  signal_processing_utils.py
tests/gui/: conftest.py  test_account_tab.py  test_bluetooth_connection_status.py  test_bluetooth_monitor.py  test_main.py  (+8 more)
