[project]
name = "ppg-health-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]
